# countersteer

./: .env.example  .gitignore  README.md  modal_app.py  modal_baseline.py  modal_layer_sweep.py  modal_patching.py  modal_steering.py  modal_whoflips_pilot.py  pyproject.toml
countersteer/: __init__.py  artifacts.py  corpus.py  layer_sweep.py  metrics.py  patching.py  pressurebench.py  provenance.py  steering.py  whoflips.py
data/english/: README.md  source_items.v1.json  split.v1.json
docs/: PRD.md
tests/: test_artifacts.py  test_corpus.py  test_layer_sweep.py  test_metrics.py  test_patching.py  test_pressurebench.py  test_provenance.py  test_steering.py  test_whoflips.py
