[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "countersteer"
version = "0.1.0"
description = "Causally certified anti-sycophancy steering experiments"
requires-python = ">=3.11"
dependencies = ["modal==1.5.0"]

[project.optional-dependencies]
dev = ["pytest==9.0.2"]

[tool.hatch.build.targets.wheel]
packages = ["countersteer"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
